# QChatty

./: .gitignore  CMakeLists.txt  README.md  rc.qrc
header/: globle.h  httpmgr.h  logindialog.h  mainwindow.h  registerdialog.h  singleton.h
src/: globle.cpp  httpmgr.cpp  logindialog.cpp  main.cpp  mainwindow.cpp  registerdialog.cpp
style/: stylesheet.qss
ui/: logindialog.ui  mainwindow.ui  registerdialog.ui
